--- a/roles/basic/vars/main.yml
+++ b/roles/basic/vars/main.yml
@@ -2,4 +2,4 @@
 # vars file for prerequirements
 create_user: ansible
 copy_local_key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_rsa.pub') }}"
-sys_packages: [ 'curl', 'vim', 'git', 'ufw', 'ca-certificates', 'gnupg', 'lsb-release']
+sys_packages: [ 'curl', 'vim', 'git', 'ufw', 'ca-certificates', 'gnupg', 'lsb-release', 'iptables', 'arptables', 'ebtables']
